# Nekosonic-Music

./: CHANGELOG.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflow/: release.yml
.github/workflows/: release.yml
src/: App.vue  api.ts  main.ts  shims-icons.d.ts  skins.ts  style.css
src-tauri/: Cargo.toml  netease_cookies.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  audio.rs  lib.rs  media_controls.rs
src-tauri/src/audio/: buffer.rs  commands.rs  controller.rs  decoder.rs  device.rs  download.rs  mod.rs  output.rs
src-tauri/src/music_sources/: bodian.rs  custom.rs  kugou.rs  kuwo.rs  kwdes.rs  mod.rs
src/api/: album.ts  app.ts  artist.ts  audio.ts  cloud.ts  comment.ts  device.ts  download.ts  fm.ts  index.ts  login.ts  playlist.ts  rec.ts  search.ts  song.ts
src/components/: CloseModal.vue  CommentSection.vue  CustomSelect.vue  DetailLayout.vue  PageHeader.vue  PlayerBar.vue  RoamDrawer.vue  Sidebar.vue  SidebarContent.vue  SongItemMenu.vue  SongListItem.vue  TitleBar.vue  ToastContainer.vue  TopBar.vue  UpdateDialog.vue  VirtualSongList.vue
src/composables/: UserLyric.ts  useDownload.ts  useLocalMusic.ts  useLyricManager.ts  useOnlineStatus.ts  usePageCache.ts  useToast.ts  useUpdater.ts  useWindowControls.ts
src/router/: index.ts
src/stores/: liked.ts  player.ts  recent.ts  settings.ts  ui.ts  user.ts
src/types/: song.ts
src/utils/: color.ts  dom.ts  format.ts  lyric.ts  song.ts
src/views/: AlbumDetail.vue  ArtistDetail.vue  (+13 more)
(+6 files in other folders)
